[tool.poetry]
name = "api-e-commerce"
version = "0.1.0"
description = ""
authors = ["Stephen Kettley <kettleystephen@gmail.com>"]
readme = "README.md"
packages = [{include = "api_e_commerce"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
