[tool.poetry]
name = "api-e-commerce"
version = "0.1.0"
description = ""
authors = ["Stephen Kettley <kettleystephen@gmail.com>"]
readme = "README.md"
packages = [{include = "api_e_commerce"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.9"
fastapi = "^0.95.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
social-auth-core = "^4.4.2"
psycopg2-binary = "^2.9.6"
httpx = "^0.24.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
